<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormLogin">


    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"></View>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/tela_de_login"
        android:paddingTop="60dp"
        android:scaleType="center"
        android:src="@drawable/tela_login"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"></ImageView>

    <TextView
        android:id="@+id/txt_slogan"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="18dp"
        android:text="@string/you_deserve_it"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/edit_user"
        app:layout_constraintEnd_toEndOf="parent"></TextView>

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_edittext_normal"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/edit_password"></EditText>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_edittext_normal"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in"></EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_button_normal"
        android:text="@string/logar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_button_normal"
        android:text="@string/cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></androidx.appcompat.widget.AppCompatButton>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/user"
        app:layout_constraintBottom_toBottomOf="@+id/edit_user"
        app:layout_constraintEnd_toEndOf="@+id/edit_user"
        app:layout_constraintTop_toTopOf="@+id/edit_user"
        app:srcCompat="@drawable/ic_baseline_supervised_user_circle_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/key_password"
        app:layout_constraintBottom_toBottomOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="@+id/edit_password"
        app:layout_constraintTop_toTopOf="@+id/edit_password"
        app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:text="Esqueceu sua senha?"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        style="?android:attr/borderlessButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>